--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,19 @@ body {
   font-family: 'Sulphur Point', sans-serif;
   /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
   font-size: 18px;
-  padding: 0 .5rem;
 }
 
 h1 {
-  font-family: 'Satisfy', cursive;
+  font-family: 'Maven Pro', sans-serif;
   color: rgba(243, 79, 96, 0.89)
 }
 
-
+/* align content so that it does not span width of the page */
+#page-body {
+  max-width: 700px;
+  margin: auto;
+  padding-top: 64px;
+}
 
 
 
