--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Maven+Pro|Satisfy|Sulphur+Point&display=swap');
 
+:root {
+  --main-color: #8d1130;
+}
+
 body {
   font-family: 'Sulphur Point', sans-serif;
   /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
@@ -8,7 +12,7 @@ body {
 
 h1 {
   font-family: 'Maven Pro', sans-serif;
-  color: rgba(243, 79, 96, 0.89)
+  color: var(--main-color);
 }
 
 /* align content so that it does not span width of the page */
@@ -18,9 +22,83 @@ h1 {
   padding-top: 64px;
 }
 
+nav {
+  border-bottom: 3px dotted var(--main-color);
+  text-align: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: white;
+}
 
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
+nav li {
+  display: inline-block;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
 
+nav a {
+  text-decoration: none;
+  color: var(--main-color);
+  font-weight: bold;
+  padding: 16px 32px;
+}
+
+nav a:hover {
+  background: var(--main-color);
+  color: white;
+}
+
+.article-list-item {
+  text-decoration: none;
+  color: black;
+  padding: 16px 0 0 0;
+}
+
+.article-list-item p {
+  padding-bottom: 32px;
+  border-bottom: 2px solid black;
+}
+
+#add-comment-form {
+  border-bottom: 2px solid black;
+  padding: 16px;
+}
+
+#add-comment-form h3 {
+  margin-bottom: 16px;
+}
+
+#add-comment-form input, textarea {
+  display: block;
+  width: 300px;
+  padding: 8px;
+  border-radius: 8px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  border: 2px solid var(--main-color);
+  margin-bottom: 16px;
+}
+
+#add-comment-form button {
+  width: 320px;
+}
+
+#upvotes-section button, p {
+  display: inline-block;
+  margin-right: 16px;
+}
+
+.comment {
+  border-bottom: 2px solid var(--main-color);
+  padding: 16px;
+}
 
 
 /* .App {
