added button to add upvotes

--- a/basic-blog-frontend/src/App.css
+++ b/basic-blog-frontend/src/App.css
@@ -102,6 +102,7 @@ nav a:hover {
 #upvotes-section button, p {
   display: inline-block;
   margin-right: 16px;
+  background: transparent;
 }
 
 .comment {
