--- a/basic-blog-frontend/src/App.css
+++ b/basic-blog-frontend/src/App.css
@@ -10,16 +10,6 @@ body {
   font-size: 18px;
 }
 
-button {
-  padding: 16px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  background-color: var(--main-color);
-  color: white;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
 h1 {
   font-family: 'Maven Pro', sans-serif;
   color: var(--main-color);
@@ -112,7 +102,7 @@ nav a:hover {
 #upvotes-section button, p {
   display: inline-block;
   margin-right: 16px;
-  background: transparent;
+  /* background: transparent; */
 }
 
 .comment {
@@ -132,6 +122,16 @@ nav a:hover {
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+button {
+  padding: 16px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16px;
+  background-color: var(--main-color);
+  color: white;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
 @media (prefers-reduced-motion: no-preference) {
